@@ -1,3 +1,8 @@
+trunk
+=====
+* fixed a bug that manifests in confidence intervals with definition variables
+  (see http://openmx.psyc.virginia.edu/thread/1505)
+
 Beta Release 999.0.0-2126 (August 03, 2012)
 ===========================================
 * added mxOption() for "Analytic Gradients" with possible values "Yes"/"No"
